--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -80,36 +80,74 @@
         font-size: 2rem;
     }
     
-    section h3 {
-        font-size: 2rem;
+    .offres h3 {
         color: grey;
-        margin-top: 15rem;
-        margin-left: 2rem
+        font-size: 30px;
+        /* margin: haut droite bas gauche */
+        margin: 200px 0 20px 10px;
+    }
+    
+    .containeur {
+        display: flex;
+        justify-content: space-between;
+        width: 95%;
+        margin: 0 auto;
     }
     
     .containeur div {
         background-color: white;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        width: 30%;
+        text-align: center;
     }
     
     .containeur div img {
-        flex: 2
+        height: 60%;
     }
     
-    hr {
-        margin: 0 auto;
-        width: 80px;
-        background-color: black;
-        display: block;
-        height: 4px;
-        margin-bottom: 10px;
-        margin-top: 10px;
+    .containeur div div {
+        width: 100%;
+        height: 100%;
+        padding: 10px 20px;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+    }
+    
+    .containeur div hr {
+        width: 10%;
+        margin: 10px auto;
     }
     
     .containeur div p {
-        text-align: center;
-        margin-top: 10px;
+        line-height: 2.5;
+    }
+    
+    .professionnel {
+        display: flex;
+        margin: 15rem auto;
+    }
+    
+    .team {
+        background-image: url(/src/img/team.jpg);
+        border: blueviolet solid 3px;
+        height: 25rem;
+        background-size: cover;
+        background-position: center;
+        flex: 1;
+    }
+    
+    .textbox2 {
+        border: springgreen solid 3px;
+        padding: 104px 10px;
+        background-color: #333;
+        text-align: left;
+        color: white;
+        flex: 1;
+    }
+    
+    .textbox2 h3 {
+        font-size: 20;
         margin-bottom: 10px;
-        flex: 1
     }
