--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -1,153 +1,230 @@
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    
-    html,
-    body {
-        font-family: "Montserrat", sans-serif;
-        background-color: rgb(241, 233, 233);
-    }
-    /* Header */
-    
-    header {
-        height: 100px;
-        background-color: #333;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    
-    header logo {
-        color: yellow;
-    }
-    
-    header h1 {
-        font-family: "Long Cang", cursive;
-        color: white;
-        margin-left: 20px;
-        font-size: 3rem;
-    }
-    
-    nav {
-        margin-right: 20px;
-        width: 300px;
-    }
-    
-    nav ul {
-        display: flex;
-        justify-content: space-evenly;
-        flex-direction: row;
-        list-style: none;
-    }
-    
-    nav ul li a {
-        color: white;
-        text-decoration: none;
-    }
-    /* Main */
-    
-    span {
-        color: orange;
-    }
-    
-    .background {
-        background-image: url(/src/img/frame.jpg);
-        background-size: cover;
-        background-position: center;
-        height: 56rem;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-    }
-    
-    .textbox1 {
-        color: white;
-        margin: 0 21.875rem;
-    }
-    
-    .textbox1 h2 {
-        font-size: 3.125rem;
-        margin-bottom: 1.25rem;
-        margin-top: 20rem;
-        text-align: center;
-    }
-    
-    .textbox1 p {
-        color: gray;
-        text-align: center;
-        font-size: 2rem;
-    }
-    
-    .offres h3 {
-        color: grey;
-        font-size: 30px;
-        /* margin: haut droite bas gauche */
-        margin: 200px 0 20px 10px;
-    }
-    
-    .containeur {
-        display: flex;
-        justify-content: space-between;
-        width: 95%;
-        margin: 0 auto;
-    }
-    
-    .containeur div {
-        background-color: white;
-        display: flex;
-        flex-direction: column;
-        width: 30%;
-        text-align: center;
-    }
-    
-    .containeur div img {
-        height: 60%;
-    }
-    
-    .containeur div div {
-        width: 100%;
-        height: 100%;
-        padding: 10px 20px;
-        display: flex;
-        justify-content: center;
-        text-align: center;
-    }
-    
-    .containeur div hr {
-        width: 10%;
-        margin: 10px auto;
-    }
-    
-    .containeur div p {
-        line-height: 2.5;
-    }
-    
-    .professionnel {
-        display: flex;
-        margin: 15rem auto;
-    }
-    
-    .team {
-        background-image: url(/src/img/team.jpg);
-        border: blueviolet solid 3px;
-        height: 25rem;
-        background-size: cover;
-        background-position: center;
-        flex: 1;
-    }
-    
-    .textbox2 {
-        border: springgreen solid 3px;
-        padding: 104px 10px;
-        background-color: #333;
-        text-align: left;
-        color: white;
-        flex: 1;
-    }
-    
-    .textbox2 h3 {
-        font-size: 20;
-        margin-bottom: 10px;
-    }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        
+        html,
+        body {
+            font-family: "Montserrat", sans-serif;
+            background-color: rgb(241, 233, 233);
+        }
+        /* Header */
+        
+        header {
+            height: 100px;
+            background-color: #333;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        
+        header logo {
+            color: yellow;
+        }
+        
+        header h1 {
+            font-family: "Long Cang", cursive;
+            color: white;
+            margin-left: 20px;
+            font-size: 3rem;
+        }
+        
+        nav {
+            margin-right: 20px;
+            width: 300px;
+        }
+        
+        nav ul {
+            display: flex;
+            justify-content: space-evenly;
+            flex-direction: row;
+            list-style: none;
+        }
+        
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+        }
+        /* Main */
+        
+        span {
+            color: orange;
+        }
+        
+        .background {
+            background-image: url(/src/img/frame.jpg);
+            background-size: cover;
+            background-position: center;
+            height: 56rem;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        }
+        
+        .textbox1 {
+            color: white;
+            margin: 0 21.875rem;
+        }
+        
+        .textbox1 h2 {
+            font-size: 3.125rem;
+            margin-bottom: 1.25rem;
+            margin-top: 20rem;
+            text-align: center;
+        }
+        
+        .textbox1 p {
+            color: gray;
+            text-align: center;
+            font-size: 2rem;
+        }
+        
+        .offres h3 {
+            color: grey;
+            font-size: 30px;
+            /* margin: haut droite bas gauche */
+            margin: 200px 0 20px 10px;
+        }
+        
+        .containeur {
+            display: flex;
+            justify-content: space-between;
+            width: 95%;
+            margin: 0 auto;
+        }
+        
+        .containeur div {
+            background-color: white;
+            display: flex;
+            flex-direction: column;
+            width: 30%;
+            text-align: center;
+        }
+        
+        .containeur div img {
+            height: 60%;
+        }
+        
+        .containeur div div {
+            width: 100%;
+            height: 100%;
+            padding: 10px 20px;
+            display: flex;
+            justify-content: center;
+            text-align: center;
+        }
+        
+        .containeur div hr {
+            width: 10%;
+            margin: 10px auto;
+        }
+        
+        .containeur div p {
+            line-height: 2.5;
+        }
+        
+        .professionnel {
+            display: flex;
+            margin: 15rem auto;
+        }
+        
+        .team {
+            background-image: url(/src/img/team.jpg);
+            border: blueviolet solid 3px;
+            height: 25rem;
+            background-size: cover;
+            background-position: center;
+            flex: 1;
+        }
+        
+        .textbox2 {
+            border: springgreen solid 3px;
+            padding: 104px 10px;
+            background-color: #333;
+            text-align: left;
+            color: white;
+            flex: 1;
+        }
+        
+        .textbox2 h3 {
+            font-size: 20;
+            margin-bottom: 1rem;
+        }
+        
+        .commentaires h3 {
+            color: grey;
+            font-size: 2rem;
+            margin: 12, 16rem 0 1, 25rem 1rem;
+        }
+        
+        .commentaires div {
+            background-color: white;
+            border: violet solid 3px;
+            display: flex;
+            flex-direction: column;
+        }
+        
+        .commentaires div div {
+            border: springgreen solid 1px;
+            display: flex;
+            flex-direction: column;
+        }
+        
+        .contact {
+            background-color: #333;
+            height: 35rem;
+        }
+        
+        .contact div {
+            border: yellow solid 2px;
+            height: 35rem;
+            width: 50rem;
+            padding: 10rem;
+            margin-left: 20rem;
+        }
+        
+        .contact h3 {
+            color: white;
+            font-size: 30px;
+        }
+        
+        form {
+            border: green solid 2px;
+            width: auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            height: 15rem;
+        }
+        /* footer */
+        
+        footer {
+            border: red solid 2px;
+            background-color: #333;
+            text-align: center;
+            color: white;
+            height: 8rem;
+        }
+        
+        footer p {
+            margin-top: 3rem;
+        }
+        
+        button {
+            border-radius: 2rem;
+            background-color: rgb(199, 146, 0);
+            color: white;
+            font-size: 20px;
+            height: 2, 5rem;
+            width: 9rem;
+            margin-left: 10rem;
+            border-style: none;
+            padding: 12px;
+        }
+        
+        input {
+            background-color: #333;
+            border-style: solid;
+            height: 2rem;
+        }
